# minicCompiler

./: ASTnode.cpp  ASTnode.h  CMakeLists.txt  README.md  codegen.cpp  codegen.h  grammar.y  lex.l  main.cpp  objgen.cpp  objgen.h  typefactor.cpp  typefactor.h
test/: arrayTest  arrayTest.out  calcTest  cl.cpp  cl.ll  fibTest  fibTest.out  ifTest  loopTest  manuTest  manuTest.out  test.cpp
